<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calc1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">



    <Button
        android:text="@string/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn7"
        android:layout_toRightOf="@+id/btn7"
        android:id="@+id/btn8"
        android:elevation="6dp" />

    <Button
        android:text="@string/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:id="@+id/btn9"
        android:elevation="6dp" />

    <Button
        android:text="@string/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn7"
        android:id="@+id/btn4"
        android:elevation="6dp"
        android:layout_alignLeft="@+id/textView" />

    <Button
        android:text="@string/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn8"
        android:layout_toRightOf="@+id/btn4"
        android:id="@+id/btn5"
        android:elevation="6dp" />

    <Button
        android:text="@string/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn9"
        android:layout_toRightOf="@+id/btn5"
        android:id="@+id/btn6"
        android:elevation="6dp" />

    <Button
        android:text="@string/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn4"
        android:id="@+id/btn1"
        android:elevation="6dp"
        android:layout_alignLeft="@+id/textView" />

    <Button
        android:text="@string/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_toRightOf="@+id/btn1"
        android:id="@+id/btn2"
        android:elevation="6dp" />

    <Button
        android:text="@string/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn2"
        android:id="@+id/btn3"
        android:elevation="6dp" />

    <Button
        android:text="@string/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn0"
        android:layout_below="@+id/btn1"
        android:elevation="6dp"
        android:layout_alignLeft="@+id/textView" />

    <Button
        android:text="@string/btnDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_toRightOf="@+id/btn0"
        android:id="@+id/btnDot"
        android:elevation="6dp" />

    <Button
        android:text="@string/btnEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btnDot"
        android:id="@+id/btnEqual"
        android:elevation="6dp" />

    <Button
        android:text="@string/btnTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@id/btn9"
        android:id="@+id/btnTimes"
        android:elevation="6dp"
        />

    <Button
        android:text="@string/btnDivided"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTimes"
        android:layout_toRightOf="@id/btn6"
        android:id="@+id/btnDivided"
        android:elevation="6dp"
        />

    <Button
        android:text="@string/btnMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPlus"
        android:id="@+id/btnMinus"
        android:layout_toRightOf="@id/btnEqual"
        android:elevation="6dp"
        />

    <TextView
        android:text="@string/textView"
        android:textSize="10dp"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:freezesText="true"
        android:layout_alignRight="@+id/btn9" />

    <Button
        android:text="@string/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlus"
        android:layout_below="@+id/btnDivided"
        android:layout_toRightOf="@id/btn3"
        android:elevation="6dp"/>

    <Button
        android:text="@string/btn7"
        android:layout_width="wrap_content"
        android:id="@+id/btn7"
        android:layout_centerInParent="false"
        android:elevation="6dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"/>

    <Button
        android:text="@string/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:layout_toRightOf="@+id/textView" />


</RelativeLayout>
