<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnCalc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc1" />

    <Button
        android:id="@+id/btnCalc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc2" />
    <Button
        android:id="@+id/btnAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutAuthor" />
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>